--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,14 @@
     <string name="app_name">Notebook</string>
     <string name="action_settings">Settings</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <!-- Fragment Title Strings -->
     <string name="viewFragmentTitle">View Note</string>
     <string name="editFragmentTitle">Edit Note</string>
+
+    <!--Main List Long Click Context Menu -->
+    <string name="edit_menu">Edit</string>
+
+    <!--Fragment Widget Strings -->
+    <string name="save_note_button">Save Note</string>
+
 </resources>
