--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,13 @@
 <resources>
     <string name="app_name">Notebook</string>
+
+    <!-- Main Menu Titles -->
+    <string name="action_add_note">Add note</string>
     <string name="action_settings">Settings</string>
 
     <!-- Fragment Title Strings -->
-    <string name="viewFragmentTitle">View Note</string>
-    <string name="editFragmentTitle">Edit Note</string>
+    <string name="viewFragmentTitle">View note</string>
+    <string name="editFragmentTitle">Edit note</string>
 
     <!--Main List Long Click Context Menu -->
     <string name="edit_menu">Edit</string>
