Coming back to the project after a while.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <!-- Fragment Title Strings -->
     <string name="viewFragmentTitle">View note</string>
     <string name="editFragmentTitle">Edit note</string>
+    <string name="create_fragment_title">Create note</string>
 
     <!--Main List Long Click Context Menu -->
     <string name="edit_menu">Edit</string>
