--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
 
     <!--Main List Long Click Context Menu -->
     <string name="edit_menu">Edit</string>
+    <string name="delete_menu">Delete</string>
 
     <!--Fragment Widget Strings -->
     <string name="save_note_button">Save Note</string>
