82 - Tutorial ended. Might do some more optimization. But It's done.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,8 @@
     <string name="editFragmentTitle">Edit note</string>
     <string name="create_fragment_title">Create note</string>
 
+    <string name="title_preferences">Application Settings</string>
+
     <!--Main List Long Click Context Menu -->
     <string name="edit_menu">Edit</string>
     <string name="delete_menu">Delete</string>
